--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,3 @@
-<footer>
-  <p>&copy; 2026 CSE Motors</p>
+<footer class="site-footer">
+  <p>&copy; 2026 CSE Motors. All rights reserved.</p>
 </footer>
