--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,6 @@
-<header>
-  <h2>CSE Motors</h2>
+<header class="site-header">
+  <div class="header-inner">
+    <img src="/images/site/logo.png" alt="CSE Motors Logo" class="logo">
+    <a href="#" class="account-link">My Account</a>
+  </div>
 </header>
