--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header class="site-header">
   <div class="header-inner">
-    <img src="/images/site/logo.png" alt="CSE Motors Logo" class="logo">
+    <img src="/images/vehicles/logo.png" alt="CSE Motors Logo" class="logo">
     <a href="#" class="account-link">My Account</a>
   </div>
 </header>
