--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,3 @@
 <footer class="site-footer">
-  <p>&copy; 2026 CSE Motors. All rights reserved.</p>
+  <p>© 2026 CSE Motors. All rights reserved.</p>
 </footer>
