--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include("../partials/head") %>
-  <body>
-    <%- include("../partials/header") %>
-    <%- include("../partials/navigation") %>
-
-    <main id="content">
-      <%- body %>
-    </main>
-
-    <%- include("../partials/footer") %>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <title><%= title %></title>
+</head>
+<body>
+  <%- body %>
+</body>
 </html>
+
