--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,8 +1,1 @@
-<nav class="main-nav">
-  <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Inventory</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Contact</a></li>
-  </ul>
-</nav>
+<%- nav %>
