--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -3,9 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title><%= title %></title>
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-  <%- body %>
+  <header>
+    <nav>
+      <%- include('../partials/navigation') %>
+    </nav>
+  </header>
+
+  <main>
+    <%- body %>
+  </main>
 </body>
 </html>
-
