--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,4 @@
-<footer class="site-footer">
-  <p>© 2026 CSE Motors. All rights reserved.</p>
+<footer>
+  <p>&copy; 2026 CSE Motors</p>
+  <a href="/trigger-error">Trigger Error</a>
 </footer>
