--- a/views/inventory/detail.ejs
+++ b/views/inventory/detail.ejs
@@ -3,15 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title><%= title %></title>
-  <link rel="stylesheet" href="/css/style.css">
+  <style>
+    .vehicle-detail { display: flex; gap: 20px; flex-wrap: wrap; }
+    .vehicle-image img { max-width: 500px; width: 100%; }
+    .vehicle-info { max-width: 500px; }
+  </style>
 </head>
 <body>
-  <nav>
-    <%- nav %>
-  </nav>
-
-  <main>
-    <%- vehicleHTML %>
-  </main>
+  <h1><%= title %></h1>
+  <%- vehicleDetailHTML %>
 </body>
 </html>
