--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,30 +1,19 @@
-<%- nav %>
-
-<section class="hero">
-  <img src="<%= heroImage %>" alt="Showroom Image">
-  <div class="hero-text">
-    <h1><%= title %></h1>
-    <p>Your dream car is waiting.</p>
-    <a href="/inventory" class="cta">View Inventory</a>
-  </div>
-</section>
-
-<section class="home-grid">
-  <div class="upgrades">
-    <h2>Upgrades</h2>
-    <ul>
-      <% upgrades.forEach(upgrade => { %>
-        <li><%= upgrade %></li>
-      <% }) %>
-    </ul>
-  </div>
-
-  <div class="reviews">
-    <h2>Reviews</h2>
-    <ul>
-      <% reviews.forEach(review => { %>
-        <li><%= review %></li>
-      <% }) %>
-    </ul>
-  </div>
-</section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Home Page</title>
+</head>
+<body>
+  <h1>Home Page</h1>
+  <ul>
+    <% vehicles.forEach(vehicle => { %>
+      <li>
+        <a href="/inv/detail/<%= vehicle.inv_id %>">
+          <%= vehicle.inv_make %> <%= vehicle.inv_model %>
+        </a>
+      </li>
+    <% }) %>
+  </ul>
+</body>
+</html>
