--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Home Page</title>
-  <link rel="stylesheet" href="/css/styles.css">
+  <title>Home</title>
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-  <h1>Home Page</h1>
-  <p>Visit <a href="/inv/detail/1">Vehicle 1</a> or <a href="/inv/detail/2">Vehicle 2</a></p>
+  <h1>Home</h1>
+  <%- messages() %>
 </body>
 </html>
