--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -1,37 +1,15 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title><%= title %></title>
-</head>
-<body>
-  <h1>Register</h1>
+<% if (messages.error && messages.error.length > 0) { %>
+  <ul style="color:red">
+    <% messages.error.forEach(msg => { %>
+      <li><%= msg %></li>
+    <% }) %>
+  </ul>
+<% } %>
 
-  <% if (errors && errors.length > 0) { %>
-    <ul style="color:red">
-      <% errors.forEach(err => { %>
-        <li><%= err.msg %></li>
-      <% }) %>
-    </ul>
-  <% } %>
-
-  <% if (messages.success) { %>
-    <p style="color:green"><%= messages.success %></p>
-  <% } %>
-
-  <form action="/account/register" method="post">
-    <label for="accountFirstname">First Name:</label>
-    <input type="text" name="account_firstname" id="accountFirstname" required value="<%= account_firstname || '' %>"><br>
-
-    <label for="accountLastname">Last Name:</label>
-    <input type="text" name="account_lastname" id="accountLastname" required value="<%= account_lastname || '' %>"><br>
-
-    <label for="accountEmail">Email:</label>
-    <input type="email" name="account_email" id="accountEmail" required value="<%= account_email || '' %>"><br>
-
-    <label for="accountPassword">Password:</label>
-    <input type="password" name="account_password" id="accountPassword" required><br>
-
-    <button type="submit">Register</button>
-  </form>
-</body>
-</html>
+<% if (messages.success && messages.success.length > 0) { %>
+  <ul style="color:green">
+    <% messages.success.forEach(msg => { %>
+      <li><%= msg %></li>
+    <% }) %>
+  </ul>
+<% } %>
