--- a/views/inventory/add-classification.ejs
+++ b/views/inventory/add-classification.ejs
@@ -1,15 +1,26 @@
-<h1>Add Classification</h1>
+<!DOCTYPE html>
+<html>
+<head><title><%= title %></title></head>
+<body>
+  <%= nav %>
+  <h1>Add Classification</h1>
 
-<% if (errors && errors.length > 0) { %>
-  <ul style="color:red;">
-    <% errors.forEach(err => { %>
-      <li><%= err.msg %></li>
-    <% }) %>
-  </ul>
-<% } %>
+  <% if (message && message.length > 0) { %>
+    <p style="color:green;"><%= message %></p>
+  <% } %>
 
-<form action="/inv/add-classification" method="POST">
-  <label for="classification_name">Classification Name:</label>
-  <input type="text" id="classification_name" name="classification_name" required>
-  <button type="submit">Add</button>
-</form>
+  <% if (errors && errors.length > 0) { %>
+    <ul style="color:red">
+      <% errors.forEach(err => { %>
+        <li><%= err.msg %></li>
+      <% }) %>
+    </ul>
+  <% } %>
+
+  <form method="POST" action="/inv/add-classification">
+    <label for="classification_name">Classification Name:</label>
+    <input type="text" name="classification_name" id="classification_name" required value="<%= classification_name %>">
+    <button type="submit">Add</button>
+  </form>
+</body>
+</html>
