--- a/views/inventory/mangement.ejs
+++ b/views/inventory/mangement.ejs
@@ -1,10 +1,17 @@
-<h1>Inventory Management</h1>
+<!DOCTYPE html>
+<html>
+<head><title><%= title %></title></head>
+<body>
+  <%= nav %>
+  <h1>Inventory Management</h1>
 
-<% if (message) { %>
-  <p style="color: green;"><%= message %></p>
-<% } %>
+  <% if (message && message.length > 0) { %>
+    <p style="color:green;"><%= message %></p>
+  <% } %>
 
-<ul>
-  <li><a href="/inv/add-classification">Add Classification</a></li>
-  <li><a href="/inv/add-inventory">Add Inventory</a></li>
-</ul>
+  <ul>
+    <li><a href="/inv/add-classification">Add Classification</a></li>
+    <li><a href="/inv/add-inventory">Add Vehicle</a></li>
+  </ul>
+</body>
+</html>
