--- a/views/errors/500.ejs
+++ b/views/errors/500.ejs
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title><%= title %></title>
+    <title>500 Internal Server Error</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <h1><%= title %></h1>
-    <p><%= message %></p>
+    <h1>500 - Internal Server Error</h1>
+    <p>An unexpected error occurred: <%= error %></p>
     <a href="/">Return Home</a>
 </body>
 </html>
