--- a/views/inventory/vehicle-detail.ejs
+++ b/views/inventory/vehicle-detail.ejs
@@ -2,12 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title><%= title %></title>
+    <title>Vehicle Detail</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <h1><%= title %></h1>
-    <p><%= message %></p>
-    <a href="/">Return Home</a>
+    <%- html %>
 </body>
 </html>
