--- a/views/errors/404.ejs
+++ b/views/errors/404.ejs
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title><%= title %></title>
+    <title>404 Not Found</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <h1><%= title %></h1>
-    <p><%= message %></p>
+    <h1>404 - Page Not Found</h1>
+    <p>The page you requested does not exist.</p>
     <a href="/">Return Home</a>
 </body>
 </html>
