--- a/views/inventory/classification.ejs
+++ b/views/inventory/classification.ejs
@@ -1,8 +1,20 @@
-<h1><%= title %></h1>
-<nav>
-  <%- nav %>
-</nav>
-<div>
-  <%- grid %>
-</div>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title><%= title %></title>
+    <link rel="stylesheet" href="/css/styles.css">
+</head>
+<body>
+    <h1>Vehicles</h1>
+    <ul>
+        <% vehicles.forEach(vehicle => { %>
+            <li>
+                <a href="/inventory/vehicle/<%= vehicle.inv_id %>">
+                    <%= vehicle.year %> <%= vehicle.make %> <%= vehicle.model %> - $<%= Number(vehicle.price).toLocaleString() %>
+                </a>
+            </li>
+        <% }) %>
+    </ul>
+</body>
+</html>
