Implement full inventory MVC: routes, controller, model, utilities, and views for classification and vehicle detail pages; add prepared statements and error handling.

--- a/views/inventory/classification.ejs
+++ b/views/inventory/classification.ejs
@@ -6,15 +6,16 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <h1>Vehicles</h1>
+    <h1><%= title %></h1>
     <ul>
         <% vehicles.forEach(vehicle => { %>
             <li>
                 <a href="/inventory/vehicle/<%= vehicle.inv_id %>">
-                    <%= vehicle.year %> <%= vehicle.make %> <%= vehicle.model %> - $<%= Number(vehicle.price).toLocaleString() %>
+                    <%= vehicle.year %> <%= vehicle.make %> <%= vehicle.model %> - $<%= vehicle.price.toLocaleString() %>
                 </a>
             </li>
         <% }) %>
     </ul>
+    <a href="/inventory">Back to Inventory</a>
 </body>
 </html>
