--- a/views/inventory/vehicle-detail.ejs
+++ b/views/inventory/vehicle-detail.ejs
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Vehicle Detail</title>
+    <title><%= title %></title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <%- html %>
+    <%- vehicleHtml %>
+    <a href="/inventory">Back to Inventory</a>
 </body>
 </html>
+
