--- a/views/inventory/detail.ejs
+++ b/views/inventory/detail.ejs
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title><%= title %></title>
-    <link rel="stylesheet" href="/css/styles.css">
-</head>
-<body>
-    <%- vehicleHTML %>
-</body>
-</html>
+<%- include("../partials/header") %>
+
+<h1><%= title %></h1>
+
+<%- detailHTML %>
+
+<%- include("../partials/footer") %>
