--- a/views/inventory.ejs
+++ b/views/inventory.ejs
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
   <title><%= title %></title>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
   <nav>
-    <%= nav %>
+    <%- nav %>
   </nav>
-  <h1><%= title %></h1>
+  <h1>Inventory Page</h1>
 </body>
 </html>
