--- a/views/errors/404.ejs
+++ b/views/errors/404.ejs
@@ -7,8 +7,9 @@
 
   <%- include("../partials/nav") %>
 
-  <h1><%= title %></h1>
-  <p><%= message %></p>
+  <h1>404</h1>
+  <p>The page you are looking for does not exist.</p>
+  <a href="/">Return Home</a>
 
 </body>
 </html>
