--- a/views/inventory/classification.ejs
+++ b/views/inventory/classification.ejs
@@ -1,21 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title><%= title %></title>
-    <link rel="stylesheet" href="/css/styles.css">
-</head>
-<body>
-    <h1><%= title %></h1>
-    <ul>
-        <% vehicles.forEach(vehicle => { %>
-            <li>
-                <a href="/inventory/vehicle/<%= vehicle.inv_id %>">
-                    <%= vehicle.year %> <%= vehicle.make %> <%= vehicle.model %> - $<%= vehicle.price.toLocaleString() %>
-                </a>
-            </li>
-        <% }) %>
-    </ul>
-    <a href="/inventory">Back to Inventory</a>
-</body>
-</html>
+<%- include("../partials/nav") %>
+
+<h1><%= title %></h1>
+<%- grid %>
