--- a/views/inventory/detail.ejs
+++ b/views/inventory/detail.ejs
@@ -1,7 +1,4 @@
-<%- include("../partials/header") %>
+<%- include("../partials/nav") %>
 
 <h1><%= title %></h1>
-
 <%- detailHTML %>
-
-<%- include("../partials/footer") %>
