--- a/views/inventory/detail.ejs
+++ b/views/inventory/detail.ejs
@@ -1,4 +1,13 @@
-<%- include("../partials/nav") %>
+<!DOCTYPE html>
+<html>
+<head>
+  <title><%= title %></title>
+</head>
+<body>
 
-<h1><%= title %></h1>
-<%- detailHTML %>
+  <%- include("/partials/nav") %>
+
+  <%- detailHTML %>
+
+</body>
+</html>
