--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,9 +1,8 @@
 <nav>
   <ul>
-    <% nav.forEach(item => { %>
-      <li>
-        <a href="<%= item.href %>"><%= item.label %></a>
-      </li>
-    <% }) %>
+    <li><a href="/">Home</a></li>
+    <li><a href="/inventory/type/1">Cars</a></li>
+    <li><a href="/inventory/type/2">Trucks</a></li>
+    <li><a href="/account">Account</a></li>
   </ul>
 </nav>
