--- a/views/errors/404.ejs
+++ b/views/errors/404.ejs
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title><%= title %></title>
-</head>
-<body>
-
-  <%- include("../partials/nav") %>
-
-  <h1>404</h1>
-  <p>The page you are looking for does not exist.</p>
-  <a href="/">Return Home</a>
-
-</body>
+<html lang="en">
+  <head>
+    <%- include("../partials/head") %>
+    <title><%= title %></title>
+  </head>
+  <body>
+    <%- include("../partials/navigation") %>
+    <h1>404 - Page Not Found</h1>
+    <p>The page you requested does not exist.</p>
+    <%- include("../partials/footer") %>
+  </body>
 </html>
