--- a/views/errors/error.ejs
+++ b/views/errors/error.ejs
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title><%= title %></title>
-</head>
-<body>
+<html lang="en">
+  <head>
+    <%- include("../partials/head") %>
+    <title><%= title %></title>
+  </head>
+  <body>
+    <%- include("../partials/navigation") %>
 
-  <%- include("../partials/nav") %>
+    <h1><%= title %></h1>
+    <p><%= message %></p>
 
-  <h1><%= title %></h1>
-  <p><%= message %></p>
-
-</body>
+    <%- include("../partials/footer") %>
+  </body>
 </html>
