--- a/views/inventory/classification.ejs
+++ b/views/inventory/classification.ejs
@@ -1,4 +1,14 @@
-<%- include("../partials/nav") %>
+<!DOCTYPE html>
+<html>
+<head>
+  <title><%= title %></title>
+</head>
+<body>
 
-<h1><%= title %></h1>
-<%- grid %>
+  <%- include("/partials/nav") %>
+
+  <h1><%= title %></h1>
+  <%- grid %>
+
+</body>
+</html>
