--- a/views/errors/404.ejs
+++ b/views/errors/404.ejs
@@ -6,8 +6,10 @@
   </head>
   <body>
     <%- include("../partials/navigation") %>
-    <h1>404 - Page Not Found</h1>
-    <p>The page you requested does not exist.</p>
+
+    <h1>404 Not Found</h1>
+    <p>Sorry, the page you requested does not exist.</p>
+
     <%- include("../partials/footer") %>
   </body>
 </html>
