--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <%- include("partials/head") %>
+  <meta charset="UTF-8">
   <title><%= title %></title>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-  <%- include("partials/navigation") %>
+  <header>
+    <img src="/images/logo.png" alt="CSE Motors Logo" width="100">
+    <% nav.forEach(item => { %>
+      <a href="<%= item.link %>"><%= item.name %></a>
+    <% }) %>
+  </header>
 
-  <h1>Welcome to CSE340 Vehicle Management</h1>
+  <main>
+    <h1>Welcome to CSE340 Vehicle Management</h1>
+    <p>This is the home page for CSE340 Vehicle Management System.</p>
+  </main>
 
-  <% if (success.length > 0) { %>
-    <p class="flash-message"><%= success[0] %></p>
-  <% } %>
+  <footer>
+    <p>&copy; 2026 CSE Motors</p>
+  </footer>
 </body>
 </html>
