--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,14 @@
-<header class="site-header">
-  <div class="header-inner">
-    <img src="/images/vehicles/logo.png" alt="CSE Motors Logo" class="logo">
-    <a href="#" class="account-link">My Account</a>
-  </div>
+<header>
+  <nav>
+    <a href="/">Home</a>
+    <a href="/inv">Inventory</a>
+    <% if (user) { %>
+      <span>Welcome, <%= user.account_firstname %>!</span>
+      <a href="/account/management">My Account</a>
+      <a href="/account/logout">Logout</a>
+    <% } else { %>
+      <a href="/account/login">Login</a>
+      <a href="/account/register">Register</a>
+    <% } %>
+  </nav>
 </header>
