--- a/views/errors/error.ejs
+++ b/views/errors/error.ejs
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <%- include("../partials/head") %>
+    <%- include("partials/head") %>
     <title><%= title %></title>
   </head>
   <body>
-    <%- include("../partials/navigation") %>
+    <%- include("partials/navigation") %>
 
     <h1><%= title %></h1>
     <p><%= message %></p>
 
-    <%- include("../partials/footer") %>
+    <%- include("partials/footer") %>
   </body>
 </html>
