--- a/views/inventory/mangement.ejs
+++ b/views/inventory/mangement.ejs
@@ -1,17 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head><title><%= title %></title></head>
-<body>
-  <%= nav %>
-  <h1>Inventory Management</h1>
-
-  <% if (message && message.length > 0) { %>
-    <p style="color:green;"><%= message %></p>
-  <% } %>
-
-  <ul>
-    <li><a href="/inv/add-classification">Add Classification</a></li>
-    <li><a href="/inv/add-inventory">Add Vehicle</a></li>
-  </ul>
-</body>
-</html>
+<h1>Inventory Management</h1>
+<% if (success.length) { %>
+  <div class="success"><%= success.join(", ") %></div>
+<% } %>
+<a href="/inv/add-classification">Add Classification</a>
+<a href="/inv/add-vehicle">Add Vehicle</a>
