--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,14 +1,12 @@
-<header>
-  <nav>
-    <a href="/">Home</a>
-    <a href="/inv">Inventory</a>
-    <% if (user) { %>
-      <span>Welcome, <%= user.account_firstname %>!</span>
-      <a href="/account/management">My Account</a>
-      <a href="/account/logout">Logout</a>
-    <% } else { %>
-      <a href="/account/login">Login</a>
-      <a href="/account/register">Register</a>
-    <% } %>
-  </nav>
+<header class="site-header">
+  <a href="/">Home</a>
+  <a href="/inv">Inventory</a>
+
+  <% if (typeof user !== "undefined" && user) { %>
+    <span>Welcome, <%= user.account_firstname %>!</span>
+    <a href="/account/management">My Account</a>
+    <a href="/account/logout">Logout</a>
+  <% } else { %>
+    <a href="/account/login">Login</a>
+  <% } %>
 </header>
