--- a/views/inventory/add-classification.ejs
+++ b/views/inventory/add-classification.ejs
@@ -1,10 +1,23 @@
-<h1>Add Classification</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Add Classification</title>
+</head>
+<body>
+  <h1>Add Classification</h1>
 
-<form method="post">
-  <input name="classification_name" required pattern="[A-Za-z0-9]+">
-  <button>Add</button>
-</form>
+  <% if (errors && errors.length > 0) { %>
+    <ul style="color:red">
+      <% errors.forEach(function(err) { %>
+        <li><%= err %></li>
+      <% }) %>
+    </ul>
+  <% } %>
 
-<% if (errors) { errors.forEach(e => { %>
-  <p><%= e.msg %></p>
-<% }) } %>
+  <form method="POST" action="/inv/add-classification">
+    <label for="classification_name">Classification Name:</label>
+    <input type="text" name="classification_name" id="classification_name" required pattern="[A-Za-z0-9]+">
+    <button type="submit">Add</button>
+  </form>
+</body>
+</html>
