--- a/views/inventory/add-inventory.ejs
+++ b/views/inventory/add-inventory.ejs
@@ -1,50 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title><%= title %></title>
+  <title>Add Inventory</title>
 </head>
 <body>
-  <h1>Add Vehicle</h1>
-  <% if (errors) { %>
+  <h1>Add Inventory Item</h1>
+
+  <% if (errors && errors.length > 0) { %>
     <ul style="color:red">
-      <% errors.forEach(error => { %>
-        <li><%= error.msg %></li>
+      <% errors.forEach(function(err) { %>
+        <li><%= err %></li>
       <% }) %>
     </ul>
   <% } %>
-  <form action="/inv/add-inventory" method="POST">
+
+  <form method="POST" action="/inv/add-inventory">
     <label>Classification:</label>
     <%= classificationList %><br>
 
     <label>Make:</label>
-    <input type="text" name="inv_make" value="<%= inv_make %>" required><br>
+    <input type="text" name="inv_make" value="<%= formData.inv_make || '' %>" required><br>
 
     <label>Model:</label>
-    <input type="text" name="inv_model" value="<%= inv_model %>" required><br>
+    <input type="text" name="inv_model" value="<%= formData.inv_model || '' %>" required><br>
 
     <label>Year:</label>
-    <input type="number" name="inv_year" value="<%= inv_year %>" required><br>
-
-    <label>Price:</label>
-    <input type="number" step="0.01" name="inv_price" value="<%= inv_price %>" required><br>
-
-    <label>Miles:</label>
-    <input type="number" name="inv_miles" value="<%= inv_miles %>" required><br>
-
-    <label>Color:</label>
-    <input type="text" name="inv_color" value="<%= inv_color %>" required><br>
+    <input type="number" name="inv_year" value="<%= formData.inv_year || '' %>" required><br>
 
     <label>Description:</label>
-    <textarea name="inv_description"><%= inv_description %></textarea><br>
+    <textarea name="inv_description"><%= formData.inv_description || '' %></textarea><br>
 
     <label>Image Path:</label>
-    <input type="text" name="inv_image" value="<%= inv_image %>"><br>
+    <input type="text" name="inv_image" value="<%= formData.inv_image || '/images/no-image.png' %>"><br>
 
     <label>Thumbnail Path:</label>
-    <input type="text" name="inv_thumbnail" value="<%= inv_thumbnail %>"><br>
+    <input type="text" name="inv_thumbnail" value="<%= formData.inv_thumbnail || '/images/no-image.png' %>"><br>
 
-    <button type="submit">Add Vehicle</button>
+    <label>Price:</label>
+    <input type="number" step="0.01" name="inv_price" value="<%= formData.inv_price || '' %>"><br>
+
+    <label>Miles:</label>
+    <input type="number" name="inv_miles" value="<%= formData.inv_miles || '' %>"><br>
+
+    <label>Color:</label>
+    <input type="text" name="inv_color" value="<%= formData.inv_color || '' %>"><br>
+
+    <button type="submit">Add Inventory</button>
   </form>
 </body>
 </html>
